src/test/deca/syntax/invalid/lexer/include_tests/include_lex-lex.corr
CLASS: [@0,105:109='class',<26>,4:0]
IDENT: [@1,111:114='Math',<47>,4:6]
OBRACE: [@2,116:116='{',<14>,4:11]
IDENT: [@3,122:126='float',<47>,5:4]
IDENT: [@4,128:130='sin',<47>,5:10]
OPARENT: [@5,131:131='(',<12>,5:13]
IDENT: [@6,132:136='float',<47>,5:14]
IDENT: [@7,138:138='f',<47>,5:20]
CPARENT: [@8,139:139=')',<13>,5:21]
OBRACE: [@9,141:141='{',<14>,5:23]
PRINTLN: [@10,151:157='println',<37>,6:8]
OPARENT: [@11,158:158='(',<12>,6:15]
STRING: [@12,159:186='"sin(f) not yet implemented"',<49>,6:16]
CPARENT: [@13,187:187=')',<13>,6:44]
SEMI: [@14,188:188=';',<17>,6:45]
CBRACE: [@15,194:194='}',<15>,7:4]
IDENT: [@16,200:204='float',<47>,8:4]
IDENT: [@17,206:208='cos',<47>,8:10]
OPARENT: [@18,209:209='(',<12>,8:13]
IDENT: [@19,210:214='float',<47>,8:14]
IDENT: [@20,216:216='f',<47>,8:20]
CPARENT: [@21,217:217=')',<13>,8:21]
OBRACE: [@22,219:219='{',<14>,8:23]
PRINTLN: [@23,229:235='println',<37>,9:8]
OPARENT: [@24,236:236='(',<12>,9:15]
STRING: [@25,237:264='"cos(f) not yet implemented"',<49>,9:16]
CPARENT: [@26,265:265=')',<13>,9:44]
SEMI: [@27,266:266=';',<17>,9:45]
CBRACE: [@28,272:272='}',<15>,10:4]
IDENT: [@29,278:282='float',<47>,11:4]
IDENT: [@30,284:287='asin',<47>,11:10]
OPARENT: [@31,288:288='(',<12>,11:14]
IDENT: [@32,289:293='float',<47>,11:15]
IDENT: [@33,295:295='f',<47>,11:21]
CPARENT: [@34,296:296=')',<13>,11:22]
OBRACE: [@35,298:298='{',<14>,11:24]
PRINTLN: [@36,308:314='println',<37>,12:8]
OPARENT: [@37,315:315='(',<12>,12:15]
STRING: [@38,316:344='"asin(f) not yet implemented"',<49>,12:16]
CPARENT: [@39,345:345=')',<13>,12:45]
SEMI: [@40,346:346=';',<17>,12:46]
CBRACE: [@41,352:352='}',<15>,13:4]
IDENT: [@42,358:362='float',<47>,14:4]
IDENT: [@43,364:367='atan',<47>,14:10]
OPARENT: [@44,368:368='(',<12>,14:14]
IDENT: [@45,369:373='float',<47>,14:15]
IDENT: [@46,375:375='f',<47>,14:21]
CPARENT: [@47,376:376=')',<13>,14:22]
OBRACE: [@48,378:378='{',<14>,14:24]
PRINTLN: [@49,388:394='println',<37>,15:8]
OPARENT: [@50,395:395='(',<12>,15:15]
STRING: [@51,396:424='"atan(f) not yet implemented"',<49>,15:16]
CPARENT: [@52,425:425=')',<13>,15:45]
SEMI: [@53,426:426=';',<17>,15:46]
CBRACE: [@54,432:432='}',<15>,16:4]
IDENT: [@55,438:442='float',<47>,17:4]
IDENT: [@56,444:446='ulp',<47>,17:10]
OPARENT: [@57,447:447='(',<12>,17:13]
IDENT: [@58,448:452='float',<47>,17:14]
IDENT: [@59,454:454='f',<47>,17:20]
CPARENT: [@60,455:455=')',<13>,17:21]
OBRACE: [@61,457:457='{',<14>,17:23]
PRINTLN: [@62,467:473='println',<37>,18:8]
OPARENT: [@63,474:474='(',<12>,18:15]
STRING: [@64,475:502='"ulp(f) not yet implemented"',<49>,18:16]
CPARENT: [@65,503:503=')',<13>,18:44]
SEMI: [@66,504:504=';',<17>,18:45]
CBRACE: [@67,510:510='}',<15>,19:4]
CBRACE: [@68,512:512='}',<15>,20:0]
INCLUDE: [@69,239:260='#include  "Math.decah"',<48>,13:20]
INCLUDE: [@70,262:285='#include    "Math.decah"',<48>,14:0]
